Use fixed for menu on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -69,7 +69,7 @@ img.emoji {
 }
 
 .menu.active {
-  @apply block absolute top-0 left-0 h-full w-full z-10;
+  @apply block fixed top-0 left-0 h-full w-full z-10;
 }
 
 .menu,
